# GenDiff

./: .gitignore  Makefile  README.md  base.cast  lcov.info  pyproject.toml  yaml.cast
.github/workflows/: user_check.yml
gendiff/: __init__.py  cli.py  constants.py
gendiff/core/: __init__.py  diff.py  format.py  gendiff.py  generation.py
gendiff/core/formaters/: __init__.py  json.py  plaine.py  stylish.py  universal_fromater.py
gendiff/parser/: __init__.py  parse.py
gendiff/scripts/: __init__.py  gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: __init__.py  test_core.py  test_gendiff.py
tests/fixtures/: file2.yaml
tests/fixtures/expected/: json_nested_expected.txt  json_plain_expected.txt
tests/fixtures/nested_files/: nested2.yml
